charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    networking.gke.io/managed-certificates: google-cert
    networking.gke.io/frontend-config: gke-frontendconfig
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
       - path: /api/*
         pathType: ImplementationSpecific
         backend:
           service:
             name: backend-service
             port:
               number: 80
       - path: /lightning
         pathType: ImplementationSpecific
         backend:
           service:
             name: flask-service
