charts/templates/new-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-ingress
    annotations:
      networking.gke.io/managed-certificates: google-cert
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: angular
            port:
              number: 443
      - path: /lightning
        pathType: ImplementationSpecific
        backend:
          service:
            name: flask
            port:
              number: 443
